// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexButtons render with custom style 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 3,
          "flex": 1,
          "marginEnd": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hasTVPreferredFocus={true}
        isTVSelectable={true}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1A1D1E",
              "borderColor": "#35393F",
              "borderRadius": 35,
              "borderStyle": "solid",
              "borderWidth": 1.457142857142857,
              "elevation": 6,
              "flexDirection": "row",
              "height": 70,
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "ProximaNova-Regular",
                "fontSize": 18,
                "fontWeight": "600",
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Play Trailer
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "zIndex": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          hasTVPreferredFocus={true}
          isTVSelectable={true}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                4294929710,
                4290124297,
              ]
            }
            endPoint={
              Object {
                "x": 0.5,
                "y": 1,
              }
            }
            locations={null}
            startPoint={
              Object {
                "x": 0.5,
                "y": 0,
              }
            }
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#3B4046",
                "borderColor": "#2089dc",
                "borderRadius": 35,
                "borderWidth": 0,
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "ProximaNova-Regular",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Watch
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`flexButtons render with primary icon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 3,
          "flex": 1,
          "marginEnd": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hasTVPreferredFocus={true}
        isTVSelectable={true}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1A1D1E",
              "borderColor": "#35393F",
              "borderRadius": 35,
              "borderStyle": "solid",
              "borderWidth": 1.457142857142857,
              "elevation": 6,
              "flexDirection": "row",
              "height": 70,
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "ProximaNova-Regular",
                "fontSize": 18,
                "fontWeight": "600",
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Play Trailer
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "zIndex": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          hasTVPreferredFocus={true}
          isTVSelectable={true}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                4294929710,
                4290124297,
              ]
            }
            endPoint={
              Object {
                "x": 0.5,
                "y": 1,
              }
            }
            locations={null}
            startPoint={
              Object {
                "x": 0.5,
                "y": 0,
              }
            }
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#3B4046",
                "borderColor": "#2089dc",
                "borderRadius": 35,
                "borderWidth": 0,
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 8,
              }
            }
          >
            <Icon
              style={
                Object {
                  "marginEnd": 14.571428571428571,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "ProximaNova-Regular",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Watch
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`flexButtons renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 3,
          "flex": 1,
          "marginEnd": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        hasTVPreferredFocus={true}
        isTVSelectable={true}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1A1D1E",
              "borderColor": "#35393F",
              "borderRadius": 35,
              "borderStyle": "solid",
              "borderWidth": 1.457142857142857,
              "elevation": 6,
              "flexDirection": "row",
              "height": 70,
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "ProximaNova-Regular",
                "fontSize": 18,
                "fontWeight": "600",
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Play Trailer
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "zIndex": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          hasTVPreferredFocus={true}
          isTVSelectable={true}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                4294929710,
                4290124297,
              ]
            }
            endPoint={
              Object {
                "x": 0.5,
                "y": 1,
              }
            }
            locations={null}
            startPoint={
              Object {
                "x": 0.5,
                "y": 0,
              }
            }
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#3B4046",
                "borderColor": "#2089dc",
                "borderRadius": 35,
                "borderWidth": 0,
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "ProximaNova-Regular",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Watch
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>
</View>
`;
